k8s/infra/test1-redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test1-redis-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test1-redis
  template:
    metadata:
      labels:
        app: test1-redis
    spec:
      containers:
      - name: test1-redis
        image: redis
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6379

---
apiVersion: v1
kind: Service
metadata:
  name: test-redis-srv
spec:
  selector:
    app: test1-redis
  ports:
  - port: 6379
    targetPort: 6379
