k8s/infra/test2-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test2-depl
spec:
  selector:
    matchLabels:
      app: test2
  template:
    metadata:
      labels:
        app: test2
    spec:
      containers:
      - name: test2
        image: alamgir72435/test2
        resources:
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: test2-srv
spec:
  selector:
    app: test2
  ports:
  - port: 5000
    targetPort: 5000
