k8s/infra/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  # ingressClassName: nginx
  rules:
    - host: bb.com
      http:
        paths:
          - pathType: Prefix
            path: /api/test1/?(.*)
            backend:
              service:
                name: test1-srv
                port:
                  number: 5000
